# NanoGPTCpp

./: .clang-format  .gitignore  BUILD  CMakeLists.txt  README  WORKSPACE  bigram_language_model.cc  bigram_language_model.h  example  example.cc  example.cpp  nano_gpt  nano_gpt_main.cc  tokenizer.cc  tokenizer.h
absl_macros/: macros.h
batcher/: batcher.cc  batcher.h
tokenizer/: tokenizer.cc  tokenizer.h
